--- a/client/src/components/sign_in.css
+++ b/client/src/components/sign_in.css
@@ -1,9 +1,10 @@
 .signin {
+    width: 100%;
+    height: 40vh;
     background-color: #f0f0f0;
-    padding-top: 25px;
-    padding-bottom: 50px;
+    align-items: flex-end;
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     
   }
   
@@ -32,8 +33,8 @@
     width: 100%;
   }
   .input {
-    max-width: 450px;
-    min-width: 450px;
+    max-width: 45%;
+    min-width: 45%;
     animation: slideInDown 1.2s ease-in-out;
   }
   button[type="submit"] {
