--- a/client/src/App.css
+++ b/client/src/App.css
@@ -33,6 +33,11 @@ body {
   margin: 0;
   padding: 0;
   color: #333;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
 }
 
 .container {
