--- a/client/src/components/sign_in.css
+++ b/client/src/components/sign_in.css
@@ -1,11 +1,10 @@
 .signin {
-    width: 100%;
     height: 40vh;
+    width: 100%;
     background-color: #f0f0f0;
-    align-items: flex-end;
     display: flex;
-    justify-content: flex-end;
-    
+    flex-direction: column;
+    justify-content: end;
   }
   
   .signin h2 {
