--- a/client/src/components/footer.css
+++ b/client/src/components/footer.css
@@ -4,5 +4,8 @@ footer {
     padding: 20px;
     text-align: center;
     height: 100px;
-    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
   }
