--- a/client/src/components/sign_up.css
+++ b/client/src/components/sign_up.css
@@ -1,15 +1,13 @@
 .signup {
     display: flex;
     flex-direction: column;
-    background-color: #f0f0f0;  
     justify-content: center; 
     align-items: center;
     min-height: 40vh;
-    max-width: 97%;
+    color: black;
+    margin-bottom: 10px;
   }
-  .signup-form {
-    width: 60%;
-  }
+
   
   .signup h2 {
     text-align: center;
@@ -26,13 +24,15 @@
     display: block;
     margin-bottom: 5px;
   }
-  
-  input {
-    max-width: 400px;
-    @media (max-width: 768px) {
-      max-width: 300px;
-    }
+
+  .input {
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    width: 80%;
   }
+  
+
   button[type="submit"] {
     background-color: #007bff;
     color: #fff;
