--- a/client/src/styles/settings.css
+++ b/client/src/styles/settings.css
@@ -1,12 +1,14 @@
 
 .settings-component {
-    width: 50%;
+
     display: flex;
     flex-direction: column;
     gap: 50px;
+    padding: 20px;
 
     @media (max-width: 320px) {
         width: 80%;
+        font-size: 1em;
     }
 }
 
