--- a/client/src/styles/workspace.css
+++ b/client/src/styles/workspace.css
@@ -1,6 +1,34 @@
 .workspace-component {
     width: 100%;
+    padding: 10px;
     position: fixed;
     overflow-y: scroll;
     height: 90vh;
+    display: flex;
+    flex-direction: row;
+    @media (max-width: 425px) {
+        flex-direction: column-reverse;
+    }
+}
+
+.menu-tray {
+    display: flex;
+    width: 30px;
+    height: 100%;
+    flex-direction: column;
+    align-items: start;
+    justify-content: flex-start;
+    gap: 10px;
+
+    @media (max-width: 425px) {
+        flex-direction: row;
+        width: 100%;
+        height: 30px;
+        align-items: center;
+        justify-content: space-around;
+    }
+}
+.btn-menu {
+    width: auto;
+    height: auto;
 }
