--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -202,3 +202,17 @@ header.hero {
   margin: 10px 0;
 }
 }
+
+.btn {
+  background-color: #222831;
+  color: #39ff14;
+  border: 1px solid #39ff14;
+  box-shadow: 0 0 5px #39ff14;
+  transition: all 0.3s ease-in-out;
+}
+
+.btn-menu {
+  background-color: #39ff14;
+  color: #000;
+  box-shadow: 0 0 15px #39ff14;
+}
