--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -4,7 +4,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #333;
+  /* background-color: #333; */
+  background-color: #0b0f19;
   color: white;
 }
 
@@ -86,48 +87,7 @@ header .btn.secondary {
 section {
   width: 80vw;
 }
-.section-component {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
 
-section h2 {
-  text-align: center;
-  font-size: 2.3em;
-  margin-bottom: 30px;
-}
-
-
-.features-grid {
-  width: 80%;
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
-}
-
-.feature {
-  text-align: center;
-  margin: 15px;
-  padding: 20px;
-  border-radius: 5px;
-  box-shadow: 10px 10px 20px 30px rgba(122, 243, 41, 0.1);
-}
-
-.feature-img {
-  width: 100%;
-  height: 50%;
-}
-.feature:hover {
-  box-shadow: 10px 10px 20px 30px rgba(227, 231, 224, 0.1);
-}
-
-.feature i {
-  font-size: 3em;
-  margin-bottom: 10px;
-}
 .benefits {
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
   margin-bottom: 30px;
