--- a/client/src/styles/footer.css
+++ b/client/src/styles/footer.css
@@ -1,11 +1,11 @@
 footer {
-    background-color: #333;
-    color: #fff;
+    background-color: #0b0f19;
+    color: #9c9999;
     padding: 20px;
     text-align: center;
     height: 100px;
+    width: 70vw;
     display: flex;
     justify-content: center;
     align-items: center;
-
   }
